# algotirhm_sdk

./: .env  .env.example  .flake8  .gitignore  Agents.md  Dockerfile  GETTING_STARTED.md  NAMING_CONVENTION.md  Python开发规范.md.md  README.md  dev_check.py  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  pytest_output.txt
config/: algorithms.algometa.yaml
data/: prediction_request.json  prepare_request.json  programme_request.json  response_1767594078646.json
docs/: PYRIGHT_INTEGRATION.md  algo_core_design.md  algo_sdk_demo.md  algorithms_response.json  executor_todo.md  executorprotocol_develop.md  hard_timeout_todolist.md  http_todolist.md
docs/plans/: 2025-12-29-module-structure.md  2025-12-30-service-registry-protocol.md  2025-12-31-algorithm-request-response-design.md  2025-12-31-response-meta-implementation.md  2025-12-31-unified-public-api-design.md  2025-12-31-unified-public-api-implementation.md  2026-01-03-swagger-ui-auto-open.md  2026-01-05-decorators-placement-design.md  2026-01-05-decorators-placement-implementation-plan.md  2026-01-05-dto-boundary-strictness-implementation-plan.md  2026-01-06-algorithm-metadata-design.md  2026-01-06-algorithm-metadata-implementation-plan.md  2026-01-06-hyperparams-registration-design.md  2026-01-06-remove-decorator-hyperparams.md  2026-01-07-algorithm-marker-registry-design.md  2026-01-07-algorithm-metadata-override-design.md  2026-01-07-registry-remote-toggle-design.md
scripts/: docker_build.ps1  docker_build.sh  package_modules.ps1  package_modules.sh  pre-commit  pre-commit.ps1  run_algo_core_service.ps1  run_algo_core_service.sh
src/algo_core_service/: .env  main.py
src/algo_core_service/algorithms/: __init__.py  httpx_test.py  prediction.py  prepare.py  programme.jsonc  programme.py  sgp_dotnet_test.py
src/algo_decorators/: __init__.py  decorators.py
src/algo_dto/: base.py  device.py  dto.py
src/algo_sdk/: __init__.py
src/algo_sdk/algorithm_api/: __init__.py  decorators.py  models.py
src/algo_sdk/config/: __init__.py
src/algo_sdk/core/: __init__.py  app_factory.py  base_model_impl.py  errors.py  executor.py  lifecycle.py  metadata.py  registry.py
src/algo_sdk/decorators/: __init__.py  algorithm_decorator_impl.py  decorators.py
src/algo_sdk/http/: __init__.py  lifecycle_hooks.py  server.py  service.py
src/algo_sdk/http/impl/: __init__.py  lifecycle_hooks.py  server.py  service.py
src/algo_sdk/logging/: __init__.py  events.py  factory.py  protocol.py  settings.py
src/algo_sdk/logging/impl/: __init__.py  events.py  standard.py
src/algo_sdk/observability/: __init__.py  metrics.py  protocol.py  tracing.py
src/algo_sdk/observability/impl/: __init__.py  metrics.py  tracing.py
src/algo_sdk/protocol/: __init__.py  models.py
src/algo_sdk/runtime/: __init__.py  context.py  factory.py  protocol.py  service_runtime.py
src/algo_sdk/runtime/impl/: __init__.py  service_runtime.py
src/algo_sdk/service_registry/: __init__.py  catalog.py  config.py  consul_registry.py  errors.py  memory_registry.py  protocol.py
src/algo_sdk/service_registry/impl/: __init__.py  consul_registry.py  lifecycle_hooks.py  memory_registry.py
src/algo_sdk/utils/: __init__.py
tests/: conftest.py  test_public_api.py  test_vectors.py
tests/core/: test_executor.py  test_executor_hard_timeout.py  test_lifecycle.py  test_registry.py  test_registry_config.py  test_registry_loader.py  test_sgp_dotnet_test.py
tests/decorators/: test_decorator.py  test_public_imports.py
tests/http/: test_server.py  test_service.py
tests/observability/: test_observability.py
tests/protocol/: test_models.py
tests/runtime/: test_context.py  test_service_runtime.py
tests/service_registry/: __init__.py  test_catalog.py  test_registry_integration.py  test_service_registry.py
todolists/: algo_sdk_plan.md
