[project]
name = "algorithm-service"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.pyright]
# Type checking settingsa
typeCheckingMode = "strict"
pythonVersion = "3.11"
pythonPlatform = "Windows"

# Code style enforcement
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportPrivateUsage = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
reportOptionalSubscript = "warning"
reportOptionalCall = "warning"

# Import settings
reportMissingImports = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

# Include/exclude patterns
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "build", "dist"]

# Naming convention checks (via reportGeneralTypeIssues)
reportGeneralTypeIssues = "warning"


[tool.black]
line-length = 79
